
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
struct idt_gate {int offset_1; scalar_t__ offset_3; scalar_t__ offset_2; } ;



__attribute__((used)) static uint64_t idt_gate_addr(struct idt_gate *gate) {
 uint64_t addr = gate->offset_1 + ((uint64_t)gate->offset_2 << 16) +
  ((uint64_t)gate->offset_3 << 32);
 return addr;
}
