; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_idt_gate_addr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_idt_gate_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.idt_gate = type { i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.idt_gate*)* @idt_gate_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @idt_gate_addr(%struct.idt_gate* %0) #0 {
  %2 = alloca %struct.idt_gate*, align 8
  %3 = alloca i32, align 4
  store %struct.idt_gate* %0, %struct.idt_gate** %2, align 8
  %4 = load %struct.idt_gate*, %struct.idt_gate** %2, align 8
  %5 = getelementptr inbounds %struct.idt_gate, %struct.idt_gate* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = load %struct.idt_gate*, %struct.idt_gate** %2, align 8
  %8 = getelementptr inbounds %struct.idt_gate, %struct.idt_gate* %7, i32 0, i32 2
  %9 = load i64, i64* %8, align 8
  %10 = trunc i64 %9 to i32
  %11 = shl i32 %10, 16
  %12 = add nsw i32 %6, %11
  %13 = load %struct.idt_gate*, %struct.idt_gate** %2, align 8
  %14 = getelementptr inbounds %struct.idt_gate, %struct.idt_gate* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = trunc i64 %15 to i32
  %17 = shl i32 %16, 32
  %18 = add nsw i32 %12, %17
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
